phone-fe/overlay/prod/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phoneshin-fe-deploy
  labels:
    app: phoneshin-fe
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: phoneshin-fe
  template:
    metadata:
      name: phoneshin-fe
      labels:
        app: phoneshin-fe
    spec:
      containers:
        - name: phoneshin-fe
          image: 'registry-harbor.phoneshin.com/phoneshin/fe:latest'
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 8
            successThreshold: 1
            failureThreshold: 7
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always
      imagePullSecrets:
        - name: inner-harbor-registry
