phone-fe/overlay/prod/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: phoneshin-fe-vs
spec:
  hosts:
    - "phoneshin.com"
    - "www.phoneshin.com"
    - "app.phoneshin.com"
  gateways:
    - istio-ingress/default-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: phoneshin-fe-svc.phoneshin.svc.cluster.local
            port:
              number: 8080
